# mp-ecdsa-java-sdk

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
cpp/: CMakeLists.txt  FindGMP.cmake
cpp/src/: LibmpecdsaJNIImpl.cpp
gradle/wrapper/: gradle-wrapper.properties
src/main/java/org/tron/common/tss/: Libmpecdsa.java  LibmpecdsaWrapper.java
src/main/java/org/tron/common/util/: Utils.java
src/main/resources/native-package/macos/: libmpecdsajni.dylib
src/test/java/org/tron/common/tss/: LibmpecdsaTest.java
